syntax = "proto3";

package cn.gdrfgdrf.connectComputer.Protobuf.Connection;

option java_package = "cn.gdrfgdrf.Protobuf.Connection.Heart";
option java_outer_classname = "HeartProto";

message HeartPingPacket {
}

message HeartPongPacket {
}

message HeartTimeoutPacket {
}